# i3ipcpp

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  Doxyfile  LICENSE  README.md
3rd/auss/: README.md
examples/: CMakeLists.txt  bar-configs.cpp  events.cpp  multi_fd.cpp  workspaces.cpp
include/i3ipc++/: ipc-util.hpp  ipc.hpp
src/: ipc-util.cpp  ipc.cpp
test/: test_ipc.hpp
